--- a/test.html
+++ b/test.html
@@ -2,6 +2,14 @@
 <html>
 <head>
 	<title>Test</title>
+	<style>
+	h1{
+		color:red;
+	}
+	ul > li{
+		font-size:20%;
+	}
+	</style>
 </head>
 <body>
 	<h1>Revision Code</h1>
